// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NotchedBox /> can be below 1`] = `
<div
  className="box-0-2-1 border-0-2-6"
>
  <div
    className="notch-0-2-3 notch_position-0-2-4 notch_below-0-2-5 border-0-2-6"
  />
  <div
    className="content-0-2-7"
  >
    hello world
  </div>
</div>
`;

exports[`<NotchedBox /> can be inline 1`] = `
<div
  className="box-0-2-1 border-0-2-6 box_inline-0-2-2"
>
  <div
    className="notch-0-2-3 notch_position-0-2-4 border-0-2-6"
  />
  <div
    className="content-0-2-7"
  >
    hello world
  </div>
</div>
`;

exports[`<NotchedBox /> can be inverted 1`] = `
<div
  className="box-0-2-1"
>
  <div
    className="notch-0-2-3 notch_position-0-2-4 inverted-0-2-8"
  />
  <div
    className="content-0-2-7 inverted-0-2-8"
  >
    hello world
  </div>
</div>
`;

exports[`<NotchedBox /> can have a negative offet 1`] = `
<div
  className="box-0-2-1 border-0-2-6"
>
  <div
    className="notch-0-2-3 border-0-2-6 inline-0-0-2-9"
  />
  <div
    className="content-0-2-7"
  >
    hello world
  </div>
</div>
`;

exports[`<NotchedBox /> can have an offet of 0 1`] = `
<div
  className="box-0-2-1 border-0-2-6"
>
  <div
    className="notch-0-2-3 notch_position-0-2-4 border-0-2-6"
  />
  <div
    className="content-0-2-7"
  >
    hello world
  </div>
</div>
`;
